    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
 1-Oct-2002
Additions:
    1. Added support for the Navigator object.
    2. Created a ClientProperties object to hold per-client properties. Each new web client is initialized from the
       default, but may be configured independently.

27-Sep-2002
Problems fixed:
    1. Disabled form parameters were being submitted with requests and could be modified by setParameter calls.

Additions:
    1. The Javascript property Link.href is now read-write.

26-Sep-2002
Problems fixed:
    1. A Javascript URL containing a question mark was incorrectly being URL-encoded.
    2. HTML comments at the start of a JavaScript were not being completely ignored

25-Sep-2002
Problems fixed:
    1. Bug #604478 - setting the form action did not always update the predefined parameter list. This could cause a request
       to be sent with the wrong URL parameters.
    2. Form, Image, and Link names are now properly treated as case-sensitive within Javascript.

13-Sep-2002
Acknowledgements:
    Thanks to Jin Zhao for help in expanding the search possibilities for links.

Additions:
    1. The mechanism for search for links has been expanded to permit arbitrary search criteria and to retrieve
       either the first match or all matches.
    2. It is now possible to control the handling of script errors by calling HttpUnitOptions.setExceptionsThrownOnScriptError.
       If the exceptions are not thrown, the error messages will instead be available via HttpUnitOptions.getScriptErrorMessages()

 9-Sep-2002
Acknowledgement:
    1. Thanks to Donald Ball for pointing out the problem with the behavior of Select.selectedIndex.

Additions: